deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medanki
  labels:
    name: medanki
    purpose: medical-anki-dz
