deploy/k8s/base/cms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cms
  labels:
    app: cms
spec:
  type: ClusterIP
  selector:
    app: cms
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
